# sweets

./: .gitignore  .kata.toml  CLAUDE.md  README.md  config.yaml  pyproject.toml  reflections.yaml  secrets.yaml.example
docs/superpowers/plans/: 2026-05-22-illustrations-mode.md  2026-05-22-vestaboard-platform.md  2026-05-25-draw-mode.md
docs/superpowers/specs/: 2026-05-22-daily-reflections-design.md  2026-05-22-illustrations-mode-design.md  2026-05-22-vestaboard-platform-design.md  2026-05-25-draw-mode-design.md
sweets/: __init__.py  config.py  scheduler.py
sweets/core/: __init__.py  api.py  board.py  characters.py
sweets/modes/: __init__.py  base.py  clock.py  drawing.py  illustrations.py  reflections.py  registry.py
sweets/tui/: __init__.py  app.py
sweets/web/: __init__.py  app.py
sweets/web/templates/: base.html  draw.html  index.html
tests/: __init__.py  conftest.py  test_api.py  test_board.py  test_characters.py  test_scheduler.py
tests/modes/: __init__.py  test_clock.py  test_drawing.py  test_illustrations.py  test_reflections.py
